--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to HTML5 Final Project</title>
+    <title>HTML5 Final Project</title>
 </head>
 <body>
     <a href="#main">Skip to main content</a>
